<resources>
    <string name="app_name">Learning English</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="certificate">Certificate</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="action_settings">Action Settings</string>
    <string name="import_image">Import image</string>
    <string name="tools">Tools</string>
    <string name="slideshow">Slideshow</string>
    <string name="gallery">Gallery</string>
    <string name="comunicate">Comunicate</string>
    <string name="share">Share</string>
    <string name="Preferences">Preferences</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="user_data">User data</string>
    <string name="sound">Sound</string>
    <string name="active_sog">Active or Inactive the Song</string>
    <string name="username">Username</string>
    <string name="identifies_user">Identifies user in the application</string>
    <string name="type_your_username">Type your username</string>
    <string name="countries_data">Countries Data</string>
    <string name="country">Country</string>
    <string name="user_country">User country</string>
    <string name="select_country">Select country</string>
    <string name="turn_of_sound">Turn of the Sound</string>
    <string name="fragment_camera">Fragment camera</string>
    <string name="fragment_gallery">Fragment Gallery</string>
    <string name="fragment_gallery1">Fragment gallery</string>
    <string name="open_drawer">Open navegation drawer</string>
    <string name="close_drawer">close navigation drawer</string>
    <string name="what_is">WHAT IS?</string>
    <string-array name="countries">
        <item>Mexico</item>
        <item>United States</item>
        <item>Poland</item>
        <item>Germany</item>
        <item>Italy</item>
    </string-array>
    <string-array name="country_codes">
        <item>MEX</item>
        <item>USA</item>
        <item>POL</item>
        <item>ITA</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_pick_image">Pick Image From Gallery</string>
    <string name="str_pick_image_resize">Pick Image From Gallery And Resize</string>
    <string name="str_select_image">Select Picture</string>
    <string name="str_no_image">no image selected</string>
    <string name="str_image_path">image path</string>
    <string name="str_image_google_drive">image from Google Drive</string>
    <string name="str_add_text">Add Text To Canvas</string>
    <string name="str_save_image">Save Image</string>
    <string name="str_maximum_size">Enter Maximum Size</string>
    <string name="str_share_image">Share Image(Default)</string>
    <string name="str_share_image_whatsapp">Share Image(Only Whatsapp)</string>
    <string name="act_canvas_demo">Canvas Demo</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="image">image</string>
    <string name="str_save_image_text">Your images has been saved in gallery at </string>
    <string name="press_of_a_button_and_listen">Press of a button and listen</string>
    <string name="ei">EI</string>
    <string name="bi">BI</string>
    <string name="ci">CI</string>
    <string name="di">DI</string>
    <string name="i">I</string>
    <string name="jei">JEI</string>
    <string name="ef">EF</string>
    <string name="gi">GI</string>
    <string name="eich">EICH</string>
    <string name="ai">AI</string>
    <string name="kei">KEI</string>
    <string name="el">EL</string>
    <string name="em">EM</string>
    <string name="ou">OU</string>
    <string name="en">EN</string>
    <string name="pi">PI</string>
    <string name="kiu">KIU</string>
    <string name="ar">AR</string>
    <string name="es">ES</string>
    <string name="ti">TI</string>
    <string name="iu">IU</string>
    <string name="vi">VI</string>
    <string name="dabli_iu">DABLI IU</string>
    <string name="ex">EX</string>
    <string name="uai">UAI</string>
    <string name="zi">ZI</string>
    <string name="write_the_name_of_the_clothes">Write the name of the clothes</string>
    <string name="learning_english">Learning English</string>
    <string name="developers">Developers:</string>
    <string name="barrientos_sanchez_pablo_jesus">* Barrientos Sanchez Pablo Jesus</string>
    <string name="coronilla_jaramillo_bernardo">* Coronilla Jaramillo Bernardo</string>
    <string name="santana_mares_jasmin_aide">* Santana Mares Jasmin Aide</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="el_objetivo_de_la_aplicaci_n_ense_ar_ingles_basico_a_los_ni_os_de_entre_6_y_8_a_os_de_edad">********************* El objetivo de la aplicación: enseñar ingles basico a los niños de entre 6 y 8 años de edad.</string>
    <string name="write_the_name_of_letter_example_ai">Write the name of letter: Example \'AI\'</string>
    <string name="rabbit">RABBIT</string>
    <string name="bee">BEE</string>
    <string name="sheep">SHEEP</string>
    <string name="butterfly">BUTTERFLY</string>
    <string name="cat">CAT</string>
    <string name="dog">DOG</string>
    <string name="horse">HORSE</string>
    <string name="pig">PIG</string>
    <string name="lion">LION</string>
    <string name="monkey">MONKEY</string>
    <string name="snail">SNAIL</string>
    <string name="write_the_name_of_the_animal_that_are">Write the name of the animal that are</string>
    <string name="r_i">R _ _ I _</string>
    <string name="verificar">verificar</string>
    <string name="e">_ _ E</string>
    <string name="s_e">S _ _ E_</string>
    <string name="b_t_e_r_y">B _ T _ E R _ _ Y</string>
    <string name="t">_ _ T</string>
    <string name="d">D _ _</string>
    <string name="h_s">H _ _ S _</string>
    <string name="pig_text">_ I _</string>
    <string name="lion_t">_ I _ _</string>
    <string name="m_k_y">M _ _ K _ Y</string>
    <string name="s_a_l">S _ A _L</string>
    <string name="save_smage">Save Smage</string>
    <string name="image_user">Image User</string>
    <string name="cap">C _ _</string>
    <string name="t_shirt">T - _ _ _ _ _</string>
    <string name="shoes">S _ _ E _</string>
    <string name="sweater">S _ _ A _ _ R</string>
    <string name="b_i">B _ _ _ _ I</string>
    <string name="s_s">S _ _ _ _ S</string>
    <string name="j_t">J _ _ _ _ T</string>
    <string name="s_k">S _ _ K _</string>
    <string name="mother">MOTHER</string>
    <string name="mam">(mamá)</string>
    <string name="father">FATHER</string>
    <string name="pap">(papá)</string>
    <string name="grandmother">GRANDMOTHER</string>
    <string name="abuela">(abuela)</string>
    <string name="grandfather">GRANDFATHER</string>
    <string name="abuelo">(abuelo)</string>
    <string name="brother">BROTHER</string>
    <string name="hermano">(hermano)</string>
    <string name="sister">SISTER</string>
    <string name="hermana">(hermana)</string>
    <string name="uncle">UNCLE</string>
    <string name="t_o">(tío)</string>
    <string name="aunt">AUNT</string>
    <string name="tia">(tía)</string>
    <string name="cousin">COUSIN</string>
    <string name="primo_a">[primo(a)]</string>
    <string name="baby">BABY</string>
    <string name="bebe">(bebé)</string>
    <string name="write_the_name_of_the_family_member">Write the name of the family member</string>
    <string name="f_t_h">F _ T H _ _</string>
    <string name="b_h_e_r">B _ _ _ H E R</string>
    <string name="a_t">A _ _ T</string>
    <string name="m_t_e">M _ T _ E _</string>
    <string name="s_s_e">S _ S _ E _</string>
    <string name="c_o_s_n">C O _ S _ N</string>
    <string name="g_a_n_f_a_h_r">G _ A N _ F A _ H _ R</string>
    <string name="g_a_n_m_o_h_r">G _ A N _ M O _ H _ R</string>
    <string name="square">SQUARE</string>
    <string name="circle">CIRCLE</string>
    <string name="cross">CROSS</string>
    <string name="oval">OVAL</string>
    <string name="star">STAR</string>
    <string name="rectangle">RECTANGLE</string>
    <string name="diamond">DIAMOND</string>
    <string name="pentagon">PENTAGON</string>
    <string name="arrow">ARROW</string>
    <string name="heart">HEART</string>
    <string name="triangle">TRIANGLE</string>
    <string name="hexagon">HEXAGON</string>
    <string name="write_the_name_of_the_geometric_figure_that_you_see">Write the name of the Geometric figure that you see</string>
    <string name="ci_l">CI _ _ L _</string>
    <string name="q_a_r">_ Q _ A R _</string>
    <string name="c_s">C _ _ S _</string>
    <string name="t_r_a_l_e">T R _ A _ _ L E</string>
    <string name="h_a_t">H _ A_ T</string>
    <string name="h_x_a_o">H _ X A _ O _</string>
    <string name="o_l">O _ _ L</string>
    <string name="p_n_g_n">P _ N _ _ G _ N</string>
    <string name="i_m_o_d">_ I _ M O _ D</string>
    <string name="a_r_o">A _ R _ O _</string>
    <string name="s_a">S _ A _</string>
    <string name="r_c_t_g_e">R _ C T _ _ G _ E</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="guess_the_name_of_the_month">Guess the name of the month</string>
    <string name="adivina_el_nombre_del_mes">Adivina el nombre del mes</string>
    <string name="month_1">JULY</string>
    <string name="month_2">March</string>
    <string name="month_3">August</string>
    <string name="what_clothes_are_shown_in_the_picture">What clothes are shown in the picture?</string>
    <string name="practice_the_operations">Practice the operations</string>
    <string name="the_result_seven">The result of: five + two =</string>
    <string name="result">Result</string>
    <string name="the_result_five">The result of: one + four =</string>
    <string name="the_result_six">The result of: trhee + trhee =</string>
    <string name="the_result_two">The result of: one + one =</string>
    <string name="the_result_nine">The result of: four + five =</string>
    <string name="the_result_ten">The result of: six + four =</string>
    <string name="the_result">The result of: ten - four =</string>
    <string name="the_result_is">The result of: Seven - Two =</string>
    <string name="review">Review</string>
    <string name="user_name">User Name</string>
    <string name="user_lastname">User LastName</string>
    <string name="back_to_login">Back to login</string>
    <string name="click_here">Click here</string>
    <string name="anterior">Anterior</string>
    <string name="siguiente">Siguiente</string>
    <string name="name_sports">Name Sports</string>
    <string name="write_the_name_of_the_sports">Write the name of sport that view</string>
    <string name="soccer">S _ C C _ _</string>
    <string name="tennis">T _ N _ _ S</string>
    <string name="baseball">B _ S _ B _ LL</string>
    <string name="golf">G _ L _</string>
    <string name="basketball">B _ SK _ T _ ALL</string>
    <string name="swiming">SW _ M _ _ NG</string>
    <string name="voleiball">V _ L _ Y _ _ LL</string>
</resources>